Self stream learning replacement of cycles